--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
         <h2 class="portfilio-title">Примеры работ</h2>
         <ul class="list">
           <li>
-            <img src="./images/" alt="" />
+            <img src="" alt="" />
             <h3 class="portfolio-heading">Технокряк</h3>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
