--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <a class="link logo" href="./index.html"> <span class="logo-first">Web</span>Studio</a>
         <ul class="list">
           <li class="menu-item">
-            <a class="link header-link" href="">Студия</a>
+            <a class="link header-link curent" href="./index.html">Студия</a>
           </li>
           <li class="menu-item">
-            <a class="link header-link" href="">Портфолио</a>
+            <a class="link header-link" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="menu-item">
-            <a class="link header-link" href="">Контакты</a>
+            <a class="link header-link" href="#contactc">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -144,7 +144,7 @@
     <!-- FOOTER -->
     <footer class="footer">
       <a class="link logo-footer" href="./index.html"> <span class="logo-first">Web</span>Studio</a>
-      <address>
+      <address id="contactc" class="address-section">
         <ul class="list">
           <li>
             <a
