--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
         <a class="link logo" href="./index.html"> <span class="logo-first">Web</span>Studio</a>
         <ul class="list">
           <li class="menu-item">
-            <a class="link header-link" href="">Студия</a>
+            <a class="link header-link" href="./index.html">Студия</a>
           </li>
           <li class="menu-item">
-            <a class="link header-link" href="">Портфолио</a>
+            <a class="link header-link curent" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="menu-item">
-            <a class="link header-link" href="">Контакты</a>
+            <a class="link header-link" href="#contacts">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -63,52 +63,72 @@
         <h2 class="portfilio-title">Примеры работ</h2>
         <ul class="list">
           <li>
-            <img src="" alt="" />
+            <img src="./images/portfolio/project1.jpg" alt="Экран ноутбука" />
             <h3 class="portfolio-heading">Технокряк</h3>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img src="./images/portfolio/project2.jpg" alt="Игра в баскетбол" />
             <h3 class="portfolio-heading">Постер New Orlean vs Golden Star</h3>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img src="./images/portfolio/project3.jpg" alt="Эмблема ресторана" />
             <h3 class="portfolio-heading">Ресторан Seafood</h3>
             <p class="portfolio-text">Приложение</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img src="./images/portfolio/project4.jpg" alt="Наушники" />
             <h3 class="portfolio-heading">Проект Prime</h3>
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img src="./images/portfolio/project5.jpg" alt="Две коробки" />
             <h3 class="portfolio-heading">Проект Boxes</h3>
             <p class="portfolio-text">Приложение</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img src="./images/portfolio/project6.jpg" alt="Монитор компьютера" />
             <h3 class="portfolio-heading">Inspiration has no Borders</h3>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img src="./images/portfolio/project7.jpg" alt="Раскрытая книга" />
             <h3 class="portfolio-heading">Издание Limited Edition</h3>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img src="./images/portfolio/project8.jpg" alt="Лейбл" />
             <h3 class="portfolio-heading">Проект LAB</h3>
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
-            <img src="" alt="" />
+            <img src="./images/portfolio/project9.jpg" alt="Работа на ноутбуке" />
             <h3 class="portfolio-heading">Growing Business</h3>
             <p class="portfolio-text">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
+    <!-- FOOTER -->
+    <footer class="footer">
+      <a class="link logo-footer" href="./index.html"> <span class="logo-first">Web</span>Studio</a>
+      <address id="contacts" class="address-section">
+        <ul class="list">
+          <li>
+            <a
+              class="link footer-address"
+              href="https://goo.gl/maps/DZzocXMzzJsJ8bnu5"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li><a class="link address" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="link address" href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
