--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.google.com/share?selection.family=Raleway:wght@400;500;700%7CRoboto:wght@400;500;700;900"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -16,8 +16,9 @@
     <!-- HEADER -->
     <header class="header-page">
       <nav class="nav-page">
-        <a class="link logo" href="./index.html"> <span class="logo-first">Web</span>Studio</a>
-        <ul class="list">
+        <a class="link logo" href="./index.html"> 
+          <span class="logo-first">Web</span>Studio</a>
+        <ul class="list termo">
           <li class="menu-item">
             <a class="link header-link" href="./index.html">Студия</a>
           </li>
@@ -40,12 +41,12 @@
     </header>
     <main>
       <section class="main-section">
-         <!-- BATTONS -->
-        <h2 class="portfilio-title">Примеры работ</h2>
-        
+        <!-- BATTONS -->
+        <h1 class="portfilio-title">Примеры работ</h1>
+
         <ul class="list">
           <li>
-            <button class="filter-btn" type="button">Все</button>
+            <button class="filter-btn accent-btn" type="button">Все</button>
           </li>
           <li>
             <button class="filter-btn" type="button">Веб-сайты</button>
@@ -61,51 +62,51 @@
           </li>
         </ul>
         <!-- PORTFOLIO -->
-        
+
         <ul class="list">
           <li>
             <img src="./images/portfolio/project1.jpg" alt="Экран ноутбука" />
-            <h3 class="portfolio-heading">Технокряк</h3>
+            <h2 class="portfolio-heading">Технокряк</h2>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/portfolio/project2.jpg" alt="Игра в баскетбол" />
-            <h3 class="portfolio-heading">Постер New Orlean vs Golden Star</h3>
+            <h2 class="portfolio-heading">Постер New Orlean vs Golden Star</h2>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
             <img src="./images/portfolio/project3.jpg" alt="Эмблема ресторана" />
-            <h3 class="portfolio-heading">Ресторан Seafood</h3>
+            <h2 class="portfolio-heading">Ресторан Seafood</h2>
             <p class="portfolio-text">Приложение</p>
           </li>
           <li>
             <img src="./images/portfolio/project4.jpg" alt="Наушники" />
-            <h3 class="portfolio-heading">Проект Prime</h3>
+            <h2 class="portfolio-heading">Проект Prime</h2>
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
             <img src="./images/portfolio/project5.jpg" alt="Две коробки" />
-            <h3 class="portfolio-heading">Проект Boxes</h3>
+            <h2 class="portfolio-heading">Проект Boxes</h2>
             <p class="portfolio-text">Приложение</p>
           </li>
           <li>
             <img src="./images/portfolio/project6.jpg" alt="Монитор компьютера" />
-            <h3 class="portfolio-heading">Inspiration has no Borders</h3>
+            <h2 class="portfolio-heading">Inspiration has no Borders</h2>
             <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/portfolio/project7.jpg" alt="Раскрытая книга" />
-            <h3 class="portfolio-heading">Издание Limited Edition</h3>
+            <h2 class="portfolio-heading">Издание Limited Edition</h2>
             <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
             <img src="./images/portfolio/project8.jpg" alt="Лейбл" />
-            <h3 class="portfolio-heading">Проект LAB</h3>
+            <h2 class="portfolio-heading">Проект LAB</h2>
             <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
             <img src="./images/portfolio/project9.jpg" alt="Работа на ноутбуке" />
-            <h3 class="portfolio-heading">Growing Business</h3>
+            <h2 class="portfolio-heading">Growing Business</h2>
             <p class="portfolio-text">Приложение</p>
           </li>
         </ul>
