--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.google.com/share?selection.family=Raleway:wght@400;500;700%7CRoboto:wght@400;500;700;900"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     />
-
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -19,7 +18,7 @@
       <nav class="nav-page">
         <a class="link logo" href="./index.html"> <span class="logo-first">Web</span>Studio</a>
         <ul class="list">
-          <li class="menu-item">
+          <li class="menu-item ">
             <a class="link header-link curent" href="./index.html">Студия</a>
           </li>
           <li class="menu-item">
@@ -79,7 +78,7 @@
 
       <!-- SERVISES -->
       <section class="servises">
-        <h2 class="heading">Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="list">
           <li class="servises-item">
             <img src="./images/section1/section11.jpg" alt="разработка сайтов" width="370" />
@@ -95,7 +94,7 @@
 
       <!-- TEAM -->
       <section class="team">
-        <h2 class="heading">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="list">
           <li class="team-item">
             <img
@@ -104,7 +103,7 @@
               alt="фото Игорь Демьяненко"
               width="270"
             />
-            <h3 class="team-photo">Игорь Демьяненко</h3>
+            <h3 class="team-name">Игорь Демьяненко</h3>
             <p class="team-profession" lang="en">Product Designer</p>
           </li>
           <li class="team-item">
@@ -114,7 +113,7 @@
               alt="фото Ольга Репина"
               width="270"
             />
-            <h3 class="team-photo">Ольга Репина</h3>
+            <h3 class="team-name">Ольга Репина</h3>
             <p class="team-profession" lang="en">Frontend Developer</p>
           </li>
           <li class="team-item">
@@ -124,7 +123,7 @@
               alt="фото Николай Тарасов"
               width="270"
             />
-            <h3 class="team-photo">Николай Тарасов</h3>
+            <h3 class="team-name">Николай Тарасов</h3>
             <p class="team-profession" lang="en">Marketing</p>
           </li>
           <li class="team-item">
@@ -134,7 +133,7 @@
               alt="фото Михаил Ермаков"
               width="270"
             />
-            <h3 class="team-photo">Михаил Ермаков</h3>
+            <h3 class="team-name">Михаил Ермаков</h3>
             <p class="team-profession" lang="en">UI Designer</p>
           </li>
         </ul>
