--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,7 @@
     <!-- HEADER -->
     <header class="header-page">
       <nav class="nav-page">
-        <a class="link logo" href="./index.html"> 
-          <span class="logo-first">Web</span>Studio</a>
+        <a class="link logo" href="./index.html"> <span class="logo-first">Web</span>Studio</a>
         <ul class="list termo">
           <li class="menu-item">
             <a class="link header-link" href="./index.html">Студия</a>
